--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,4 +97,4 @@ services:
       - WHITELABEL_CIVIC_ENTITY_SHORT_NAME
       - WHITELABEL_CIVIC_ENTITY_FULL_NAME
       - FAVICON_URL
-    command: ~run -Dconfig.file=conf/application.dev.conf
+    command: info # ~run -Dconfig.file=conf/application.dev.conf
