--- a/server/conf/application.dev-browser-tests.conf
+++ b/server/conf/application.dev-browser-tests.conf
@@ -1,14 +1,9 @@
 # Configuration for the dev browser test CiviForm server.
 include "application.dev.conf"
 
-# db {
-#   default.driver = org.postgresql.Driver
-#   default.url = "jdbc:postgresql://db:5432/browsertests"
-# }
-
 # The dev server turns somethings on by default so
 # they're easier to see and use.
 # Browser tests shouldn't turn features on by default,
 # they should enable them via the Feature Flags HTTP
 # handler as needed.
-application_status_tracking_enabled = true
+application_status_tracking_enabled = false
