--- a/server/conf/application.test.conf
+++ b/server/conf/application.test.conf
@@ -8,7 +8,7 @@ play.modules {
 
 db {
   default.driver = org.postgresql.Driver
-  default.url = "jdbc:postgresql://db:5432/postgres"
+  default.url = "jdbc:postgresql://db:5432/unittests"
 }
 
 play.evolutions.db.default.enabled = "true"
