--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,7 +26,7 @@ jobs:
           DOCKER_BUILDKIT: 1
         run: bin/build-dev-oidc
       - name: Run tests
-        run: rm server/public/stylesheets/tailwind.css; bin/run-test-ci
+        run: echo $USER; touch server/public/stylesheets/foo.css; bin/run-test-ci
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
