--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,6 +10,26 @@ on:
 permissions: read-all
 
 jobs:
+  build_containers:
+    runs-on: ubuntu-latest
+    steps:
+    - name: check out ${{ env.GITHUB_REF }}
+      uses: actions/checkout@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    - name: Build civiform-dev
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        tags: civiform-dev:latest
+        outputs: type=docker,dest=/tmp/containers/civiform-dev.tar
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: containers
+        path: /tmp/containers
+
   run_junit_tests:
     runs-on: ubuntu-latest
     steps:
@@ -17,10 +37,15 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Build test container
-        env:
-          DOCKER_BUILDKIT: 1
-        run: docker build -t civiform-dev --cache-from docker.io/civiform/civiform-dev:latest ./
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: containers
+          path: /tmp
+      - name: Load Docker image
+        run: |
+          docker load --input /tmp/containers/civiform-dev.tar
+          docker image ls -a
       - name: Build dev-oidc
         env:
           DOCKER_BUILDKIT: 1
