--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,28 +10,29 @@ on:
 permissions: read-all
 
 jobs:
-  build_containers:
+  build_images:
     runs-on: ubuntu-latest
     steps:
     - name: check out ${{ env.GITHUB_REF }}
       uses: actions/checkout@v3
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+    - run:  mkdir /tmp/images
     - name: Build civiform-dev
       uses: docker/build-push-action@v2
       with:
         context: .
         file: ./Dockerfile
         tags: civiform-dev:latest
-        outputs: type=docker,dest=/tmp/containers/civiform-dev.tar
+        outputs: type=docker,dest=/tmp/images/civiform-dev.tar
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
-        name: containers
-        path: /tmp/containers
+        path: /tmp/images
 
   run_junit_tests:
     runs-on: ubuntu-latest
+    needs: build_images
     steps:
       - name: check out ${{ env.GITHUB_REF }}
         uses: actions/checkout@v3
@@ -40,8 +41,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
-          name: containers
-          path: /tmp
+          path: /tmp/images
       - name: Load Docker image
         run: |
           docker load --input /tmp/containers/civiform-dev.tar
