--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
       - '9000'
       - '8457'
     volumes:
+      # Needed for unit tests running in github actions to upload coverage
+      # when tests finish.
       - ./server/code-coverage:/usr/src/server/code-coverage
     environment:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
