--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
       - '5432'
     environment:
       POSTGRES_PASSWORD: example
+    volumes:
+      - ./init_postgres.sql:/docker-entrypoint-initdb.d/init_postgres.sql
 
   civiform:
     image: civiform-dev
@@ -45,6 +47,10 @@ services:
     expose:
       - '9000'
       - '8457'
+    volumes:
+      # Needed for unit tests running in github actions to upload coverage
+      # when tests finish.
+      - ./server/code-coverage:/usr/src/server/code-coverage
     environment:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-test}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-test}
