--- a/test-support/unit-test-docker-compose.yml
+++ b/test-support/unit-test-docker-compose.yml
@@ -8,18 +8,18 @@ services:
     environment:
       POSTGRES_PASSWORD: example
 
-  oidc:
+  dev-oidc:
     image: civiform/oidc-provider
     restart: always
-    ports: # For debugging
-      - 3380:3380
+    expose:
+      - 3390
 
   civiform:
     image: civiform-dev
     restart: always
     links:
       - 'db:database'
-      - 'oidc'
+      - 'dev-oidc'
     volumes:
       - ../server/code-coverage:/usr/src/server/code-coverage
     entrypoint: /bin/bash
