--- a/test-support/unit-test-docker-compose.yml
+++ b/test-support/unit-test-docker-compose.yml
@@ -15,6 +15,8 @@ services:
     restart: always
     expose:
       - 3390
+    environment:
+      - OIDC_PORT=3390
 
   civiform:
     image: civiform-dev
@@ -33,7 +35,7 @@ services:
     environment:
       - IDCS_CLIENT_ID=idcs-fake-oidc-client
       - IDCS_SECRET=idcs-fake-oidc-secret
-      - IDCS_DISCOVERY_URI=http://oidc:3380/.well-known/openid-configuration
+      - IDCS_DISCOVERY_URI=http://dev-oidc:3390/.well-known/openid-configuration
       - DB_JDBC_STRING=jdbc:postgresql://database:5432/postgres
       - BASE_URL=http://localhost:9000
       - CIVIFORM_TIME_ZONE_ID
