--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -45,12 +45,12 @@ whitelabel {
   # Logo with name used on the applicant-facing program index page.
   logo_with_name_url = ${?WHITELABEL_LOGO_WITH_NAME_URL}
 
-  # The short display name of the civic entity, will use "Seattle" if not set.
-  civic_entity_short_name = "Seattle"
+  # The short display name of the civic entity, will use "TestCity" if not set.
+  civic_entity_short_name = "TestCity"
   civic_entity_short_name = ${?WHITELABEL_CIVIC_ENTITY_SHORT_NAME}
 
-  # The full display name of the civic entity, will use "City of Seattle" if not set.
-  civic_entity_full_name = "City of Seattle"
+  # The full display name of the civic entity, will use "City of TestCity" if not set.
+  civic_entity_full_name = "City of TestCity"
   civic_entity_full_name = ${?WHITELABEL_CIVIC_ENTITY_FULL_NAME}
 
   # The URL of a 32x32 or 16x16 pixel [favicon](https://developer.mozilla.org/en-US/docs/Glossary/Favicon)
