--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,4 +99,4 @@ services:
       - WHITELABEL_CIVIC_ENTITY_SHORT_NAME
       - WHITELABEL_CIVIC_ENTITY_FULL_NAME
       - FAVICON_URL
-    command: ~run -Dconfig.file=conf/application.dev.conf
+    command: ~runDevServer
