--- a/server/conf/application.dev-browser-tests.conf
+++ b/server/conf/application.dev-browser-tests.conf
@@ -12,3 +12,7 @@ db {
 # they should enable them via the Feature Flags HTTP
 # handler as needed.
 application_status_tracking_enabled = false
+
+# The default value is true, we set it to false here because we do not know
+# the IP address that will be used to call the API in the browser tests.
+api_keys_ban_global_subnet = false
