--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,7 +24,7 @@ services:
       - 9000:9000
       - 8457:8457
     # -Dsbt.offline tells sbt to run in "offline" mode and not re-download dependancies.
-    command: -jvm-debug "*:8457" ~run -Dsbt.offline -Dconfig.file=conf/application.dev.conf
+    command: -jvm-debug "*:8457" ~runDevServer -Dsbt.offline
 
   civiform-shell:
     image: civiform-dev
