Renovate not grouping Jackson
Removing the ending `:` which is preventing the com.fasterxml.jackson libraries from being correctly group by renovatebot.

--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,7 @@
     },
     {
       "groupName": "jackson",
-      "matchPackagePrefixes": ["com.fasterxml.jackson:"]
+      "matchPackagePrefixes": ["com.fasterxml.jackson"]
     },
     {
       "groupName": "jupiter",
