if register_uri is set show create account button

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -78,6 +78,10 @@ auth {
   oidc_override_logout_url = ${?APPLICANT_OIDC_OVERRIDE_LOGOUT_URL}
   oidc_post_logout_param = ${?APPLICANT_OIDC_POST_LOGOUT_REDIRECT_PARAM}
   oidc_logout_client_id_param = ${?APPLICANT_OIDC_LOGOUT_CLIENT_PARAM}
+
+  # Direct URI to create new account.
+  register_uri = ${?APPLICANT_REGISTER_URI}
+  register_uri = ${?IDCS_REGISTER_URI}
 }
 
 ## IDCS integration
@@ -86,7 +90,6 @@ idcs.client_id = ${?IDCS_CLIENT_ID}
 idcs.secret = ${?IDCS_SECRET}
 idcs.discovery_uri = "https://idcs-f582fefb879b4db5a88a370e8f2f6013.identity.oraclecloud.com/.well-known/openid-configuration"
 idcs.discovery_uri = ${?IDCS_DISCOVERY_URI}
-idcs.register_uri = ${?IDCS_REGISTER_URI}
 
 ## LoginRadius integration
 # LoginRadius secrets must be provided by environment variables - we cannot check them in.
