--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,4 +101,4 @@ services:
       - WHITELABEL_CIVIC_ENTITY_SHORT_NAME
       - WHITELABEL_CIVIC_ENTITY_FULL_NAME
       - FAVICON_URL
-    command: ~runDevServer
+    entrypoint: /bin/bash
