--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -70,13 +70,24 @@ play.http.secret.key = ${?SECRET_KEY}
 auth {
   # Configure which IDP to use for applicant and admin authentication.
   applicant_idp = "idcs"
-  applicant_idp = ${?CIVIFORM_APPLICANT_IDP}
 
   # Logout options when using OIDC (idcs, or applicant_generic_oidc)
   oidc_provider_logout = false
   oidc_provider_logout = ${?APPLICANT_OIDC_PROVIDER_LOGOUT}
+  # By default for logout endpoint 'end_session_endpoint' from auth provider
+  # discovery metadata file is used. But for some integration that standard flow
+  # might not be working and we need to override logout URL.
   oidc_override_logout_url = ${?APPLICANT_OIDC_OVERRIDE_LOGOUT_URL}
+
+  # URL param used to pass post logout redirect url in the logout request to the
+  # auth provider. It defaults to 'post_logout_redirect_uri' if this value is
+  # unset. If this value set to empty string - post logout redirect url is not
+  # passed at all and instead it needs to be hardcoded on the auth provider
+  # (otherwise user won't be redirected back to civiform after logout).
   oidc_post_logout_param = ${?APPLICANT_OIDC_POST_LOGOUT_REDIRECT_PARAM}
+
+  # URL param used to pass client id in the logout request to the auth provider.
+  # If unset - client id is not added to the request.
   oidc_logout_client_id_param = ${?APPLICANT_OIDC_LOGOUT_CLIENT_PARAM}
 
   # Direct URI to create new account.
@@ -88,7 +99,6 @@ auth {
 idcs.client_id = ${?IDCS_CLIENT_ID}
 idcs.secret = ${?IDCS_SECRET}
 idcs.discovery_uri = "https://idcs-f582fefb879b4db5a88a370e8f2f6013.identity.oraclecloud.com/.well-known/openid-configuration"
-idcs.discovery_uri = ${?IDCS_DISCOVERY_URI}
 
 ## LoginRadius integration
 # LoginRadius secrets must be provided by environment variables - we cannot check them in.
