--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -70,6 +70,7 @@ play.http.secret.key = ${?SECRET_KEY}
 auth {
   # Configure which IDP to use for applicant and admin authentication.
   applicant_idp = "idcs"
+  applicant_idp = ${?CIVIFORM_APPLICANT_IDP}
 
   # Logout options when using OIDC (idcs, or applicant_generic_oidc)
   oidc_provider_logout = false
@@ -99,6 +100,7 @@ auth {
 idcs.client_id = ${?IDCS_CLIENT_ID}
 idcs.secret = ${?IDCS_SECRET}
 idcs.discovery_uri = "https://idcs-f582fefb879b4db5a88a370e8f2f6013.identity.oraclecloud.com/.well-known/openid-configuration"
+idcs.discovery_uri = ${?IDCS_DISCOVERY_URI}
 
 ## LoginRadius integration
 # LoginRadius secrets must be provided by environment variables - we cannot check them in.
