Adding feature flag for address validation

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -648,3 +648,8 @@ application_status_tracking_enabled = ${?CIVIFORM_APPLICATION_STATUS_TRACKING_EN
 # work as expected in production if there are multiple servers.
 feature_flag_overrides_enabled = false
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
+
+feature_flag {
+  address_validation_enabled = false
+  address_validation_enabled = ${?FEATURE_FLAG_ADDRESS_VALIDATION_ENABLED}
+}
