--- a/server/conf/application.dev.conf
+++ b/server/conf/application.dev.conf
@@ -30,3 +30,8 @@ play.filters {
 application_status_tracking_enabled = true
 feature_flag_overrides_enabled = true
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
+
+feature_flag {
+  address_validation_enabled = true
+  address_validation_enabled = ${?FEATURE_FLAG_ADDRESS_VALIDATION_ENABLED}
+}
