--- a/.github/workflows/pr_server_skip.yaml
+++ b/.github/workflows/pr_server_skip.yaml
@@ -18,6 +18,8 @@ on:
       - 'prod.Dockerfile'
       - '.github/workflows/**'
 
+permissions: read-all
+
 jobs:
   run_all_tests:
     uses: ./.github/workflows/tests_skip.yaml
