--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,9 @@
     "eslint": "8.28.0",
     "postcss": "8.4.19",
     "tailwindcss": "3.1.8",
-    "ts-loader": "^9.4.1",
+    "ts-loader": "9.4.1",
     "typescript": "4.9.3",
-    "webpack-cli": "^4.10.0"
-  },
-  "dependencies": {
-    "webpack": "^5.75.0"
+    "webpack": "5.75.0",
+    "webpack-cli": "4.10.0"
   }
 }
