--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -653,6 +653,9 @@ allow_civiform_admin_access_programs = ${?ALLOW_CIVIFORM_ADMIN_ACCESS_PROGRAMS}
 application_status_tracking_enabled = false
 application_status_tracking_enabled = ${?CIVIFORM_APPLICATION_STATUS_TRACKING_ENABLED}
 
+admin_reporting_ui_enabled = false
+admin_reporting_ui_enabled = ${?CIVIFORM_ADMIN_REPORTING_UI_ENABLED}
+
 # If enabled allows for setting of feature flags via HTTP.
 # This is explicitly not recommended for production and intended to aid
 # development and pre-release evaluation of features. In fact it is unlikely to
