add feature flag for program view only view enabling

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -652,6 +652,9 @@ allow_civiform_admin_access_programs = ${?ALLOW_CIVIFORM_ADMIN_ACCESS_PROGRAMS}
 # In development features.
 application_status_tracking_enabled = false
 application_status_tracking_enabled = ${?CIVIFORM_APPLICATION_STATUS_TRACKING_ENABLED}
+program_view_only_view_enabled = false
+program_view_only_view_enabled = ${?PROGRAM_VIEW_ONLY_VIEW_ENABLED}
+
 
 # If enabled allows for setting of feature flags via HTTP.
 # This is explicitly not recommended for production and intended to aid
