--- a/server/conf/application.dev-browser-tests.conf
+++ b/server/conf/application.dev-browser-tests.conf
@@ -13,6 +13,8 @@ db {
 # handler as needed.
 application_status_tracking_enabled = false
 
+program_view_only_view_enabled = false
+
 # The default value is true, we set it to false here because we do not know
 # the IP address that will be used to call the API in the browser tests.
 api_keys_ban_global_subnet = false
