--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -659,3 +659,8 @@ application_status_tracking_enabled = ${?CIVIFORM_APPLICATION_STATUS_TRACKING_EN
 # work as expected in production if there are multiple servers.
 feature_flag_overrides_enabled = false
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
+
+
+use_js_bundles = false
+use_js_bundles = ${?USE_JS_BUNDLES}
+
