--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,12 @@
     "@typescript-eslint/eslint-plugin": "5.45.0",
     "@typescript-eslint/parser": "5.45.1",
     "autoprefixer": "10.4.13",
+    "eslint": "8.29.0",
     "postcss": "8.4.19",
     "tailwindcss": "3.1.8",
-    "eslint": "8.29.0",
-    "typescript": "4.9.3"
+    "ts-loader": "9.4.1",
+    "typescript": "4.9.3",
+    "webpack": "5.75.0",
+    "webpack-cli": "4.10.0"
   }
 }
