--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -660,7 +660,8 @@ application_status_tracking_enabled = ${?CIVIFORM_APPLICATION_STATUS_TRACKING_EN
 feature_flag_overrides_enabled = false
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
 
-
+# When set to true JS is served using JS bundles.
+# https://github.com/civiform/civiform/issues/3864
 use_js_bundles = false
 use_js_bundles = ${?USE_JS_BUNDLES}
 
