--- a/server/conf/application.dev.conf
+++ b/server/conf/application.dev.conf
@@ -28,5 +28,6 @@ play.filters {
 
 # Feature flags.
 application_status_tracking_enabled = true
+program_eligibility_conditions_enabled = true
 feature_flag_overrides_enabled = true
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
