--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -656,6 +656,9 @@ application_status_tracking_enabled = ${?CIVIFORM_APPLICATION_STATUS_TRACKING_EN
 program_eligibility_conditions_enabled = false
 program_eligibility_conditions_enabled = ${?PROGRAM_ELIGIBILITY_CONDITIONS_ENABLED}
 
+predicates_multiple_questions_enabled = false
+predicates_multiple_questions_enabled = ${?PREDICATES_MULTIPLE_QUESTIONS_ENABLED}
+
 # If enabled allows for setting of feature flags via HTTP.
 # This is explicitly not recommended for production and intended to aid
 # development and pre-release evaluation of features. In fact it is unlikely to
