--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -652,6 +652,9 @@ allow_civiform_admin_access_programs = ${?ALLOW_CIVIFORM_ADMIN_ACCESS_PROGRAMS}
 # In development features.
 application_status_tracking_enabled = false
 application_status_tracking_enabled = ${?CIVIFORM_APPLICATION_STATUS_TRACKING_ENABLED}
+program_read_only_view_enabled = false
+program_read_only_view_enabled = ${?PROGRAM_READ_ONLY_VIEW_ENABLED}
+
 
 program_eligibility_conditions_enabled = false
 program_eligibility_conditions_enabled = ${?PROGRAM_ELIGIBILITY_CONDITIONS_ENABLED}
