--- a/server/conf/application.test.conf
+++ b/server/conf/application.test.conf
@@ -20,6 +20,7 @@ auth.applicant_idp = "disabled"
 
 # Feature flags.
 application_status_tracking_enabled = true
+program_read_only_view_enabled = true
 feature_flag_overrides_enabled = true
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
 
