set feature flag to disabled for browser tests

--- a/server/conf/application.dev.conf
+++ b/server/conf/application.dev.conf
@@ -27,6 +27,7 @@ play.filters {
 }
 
 # Feature flags.
+# These should be set to the system default in application.dev-browser-tests.conf
 application_status_tracking_enabled = true
 program_eligibility_conditions_enabled = true
 program_read_only_view_enabled = true
