--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,14 @@ services:
       - '4566'
     environment:
       - SERVICES=s3,ses
+    networks:
+      default:
+        aliases:
+          # We use hosted-style for s3 bucket urls. Which matches production.
+          # https://docs.localstack.cloud/user-guide/aws/s3/
+          # So we need to add host mapping for test bucket civiform-local-s3
+          - civiform-local-s3.localhost.localstack.cloud
+          - localhost.localstack.cloud
 
   azurite:
     image: mcr.microsoft.com/azure-storage/azurite
