adds initial service and configuration

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -665,3 +665,18 @@ feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
 use_js_bundles = false
 use_js_bundles = ${?USE_JS_BUNDLES}
 
+# esri address services
+esri_address_verification = [
+    {
+        value: "Seattle",
+        label: "Seattle",
+        url: "https://gisdata.seattle.gov/server/rest/services/COS/Seattle_City_Limits/MapServer/1/query",
+        path: "features[*].attributes.CITYNAME"
+    },
+    {
+      value: "Test",
+      label: "Test",
+      url: "https://gisdata.seattle.gov/server/rest/services/COS/Seattle_City_Limits/MapServer/1/query",
+      path: "features[*].attributes.CITYNAME"
+    }
+]
