Add eligibility feature (#3932)
Adds the ability to specify predicates on blocks that are used to determine if the applicant is eligible for the program.

If an applicant is not eligible they are shown a screen indicating that and can not proceed.

Setting/removing/evaluating eligibility is very similar to the existing visibility feature. The Admin management of them is side-by-side in the block UI and is mostly the exact same View code.

Eligibility of an applicant is done upon submit of the block. Evaluation of eligibility is conceptually done "after" the block and before determination of the next "visible" block to show.

The feature is flag guarded for both seeing the admin UI and evaluation of any set eligibility predicates.

--- a/server/conf/application.dev.conf
+++ b/server/conf/application.dev.conf
@@ -27,7 +27,9 @@ play.filters {
 }
 
 # Feature flags.
+# These should be set to the system default in application.dev-browser-tests.conf
 application_status_tracking_enabled = true
+program_eligibility_conditions_enabled = true
 program_read_only_view_enabled = true
 feature_flag_overrides_enabled = true
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
