--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -73,8 +73,12 @@ auth {
   applicant_idp = ${?CIVIFORM_APPLICANT_IDP}
 
   # Logout options when using OIDC (idcs, or applicant_generic_oidc)
-  oidc_provider_logout = false
+
+  # Enables central logout:
+  # https://docs.civiform.us/contributor-guide/developer-guide/authentication-providers#logout
+  oidc_provider_logout = true
   oidc_provider_logout = ${?APPLICANT_OIDC_PROVIDER_LOGOUT}
+
   # By default for logout endpoint 'end_session_endpoint' from auth provider
   # discovery metadata file is used. But for some integration that standard flow
   # might not be working and we need to override logout URL.
