--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -36,6 +36,20 @@ jobs:
           # disabling it from failing the entire pipeline for now.
           fail_ci_if_error: false
 
+  run_typescript_unit_tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: check out ${{ env.GITHUB_REF }}
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build test container
+        env:
+          DOCKER_BUILDKIT: 1
+        run: docker build -t civiform-dev --cache-from docker.io/civiform/civiform-dev:latest ./
+      - name: Run tests
+        run: bin/run-ts-tests
+
   run_browser_tests_aws:
     strategy:
       fail-fast: false
