--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,16 @@
   "devDependencies": {
     "@tailwindcss/line-clamp": "0.4.2",
     "@tsconfig/recommended": "1.0.1",
+    "@types/jest": "29.2.4",
     "@typescript-eslint/eslint-plugin": "5.47.1",
     "@typescript-eslint/parser": "5.47.1",
     "autoprefixer": "10.4.13",
     "eslint": "8.30.0",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
     "postcss": "8.4.20",
     "tailwindcss": "3.1.8",
+    "ts-jest": "29.0.3",
     "ts-loader": "9.4.2",
     "typescript": "4.9.4",
     "webpack": "5.75.0",
