--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,7 +12,7 @@
     "sourceRoot": "/assets/javascripts",
     "baseUrl": "./",
     // TODO(#3361): fix and reenable strict checks.
-    "strict": false
+    "strict": true
   },
   "include": ["app/assets/javascripts/*"]
 }
