--- a/server/conf/messages.am
+++ b/server/conf/messages.am
@@ -40,6 +40,9 @@ validation.errorAnnouncementSr=በቅጹ ውስጥ ስህተቶች አሉ። እ
 # Message displayed at the top of a question page denoting fields with a * are required.
 content.requiredFieldsAnnotation=ማስታወሻ፦ የ* ምልክት የተደረገባቸው መስኮች ያስፈልጋሉ።
 
+# Message displayed below "Choose File" button to say that on the phone users can use their camera.
+content.mobileFileUploadHelp=በእርስዎ ስልክ ላይ? እንዲሁም «ፋይልን ምረጥ» የስልክ ካሜራዎን ሰነዶችን ለመስቀል እንዲጠቀሙበት ያስችልዎታል።
+
 #-------------------------------------------------------------#
 # LOGIN - contains text that for login page.                  #
 #-------------------------------------------------------------#
