Base for address correction and verification (#4036)

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -673,4 +673,12 @@ predicates_multiple_questions_enabled = ${?PREDICATES_MULTIPLE_QUESTIONS_ENABLED
 feature_flag_overrides_enabled = false
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
 
+# esri address services
+# address correction
+esri_address_correction_enabled = false
+esri_address_correction_enabled = ${?ESRI_ADDRESS_CORRECTION_ENABLED}
+
+# address verification
+esri_address_service_area_validation_enabled = false
+esri_address_service_area_validation_enabled = ${?ESRI_ADDRESS_SERVICE_AREA_VALIDATION_ENABLED}
 
