--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -677,8 +677,17 @@ feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
 # address correction
 esri_address_correction_enabled = false
 esri_address_correction_enabled = ${?ESRI_ADDRESS_CORRECTION_ENABLED}
+esri_find_address_candidates_url = "changeme"
+esri_find_address_candidates_url = ${?ESRI_FIND_ADDRESS_CANDIDATES_URL}
 
 # address verification
 esri_address_service_area_validation_enabled = false
 esri_address_service_area_validation_enabled = ${?ESRI_ADDRESS_SERVICE_AREA_VALIDATION_ENABLED}
-
+esri_address_service_area_validation_labels = ["changeme"]
+esri_address_service_area_validation_labels = ${?ESRI_ADDRESS_SERVICE_AREA_VALIDATION_LABELS}
+esri_address_service_area_validation_values = ["changeme"]
+esri_address_service_area_validation_values = ${?ESRI_ADDRESS_SERVICE_AREA_VALIDATION_VALUES}
+esri_address_service_area_validation_urls = ["changeme"]
+esri_address_service_area_validation_urls = ${?ESRI_ADDRESS_SERVICE_AREA_VALIDATION_URLS}
+esri_address_service_area_validation_paths = ["changeme"]
+esri_address_service_area_validation_paths =  ${?ESRI_ADDRESS_SERVICE_AREA_VALIDATION_PATHS}
