--- a/server/conf/application.dev.conf
+++ b/server/conf/application.dev.conf
@@ -33,3 +33,4 @@ program_eligibility_conditions_enabled = true
 program_read_only_view_enabled = true
 feature_flag_overrides_enabled = true
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
+esri_address_correction_enabled = true
