--- a/server/conf/application.dev-browser-tests.conf
+++ b/server/conf/application.dev-browser-tests.conf
@@ -13,7 +13,7 @@ db {
 # handler as needed.
 application_status_tracking_enabled = false
 program_eligibility_conditions_enabled = false
-program_read_only_view_enabled = true
+program_read_only_view_enabled = false
 
 # The default value is true, we set it to false here because we do not know
 # the IP address that will be used to call the API in the browser tests.
