Refactor to support a read only version to view a Program (#4011)
Co-authored-by: Jessica Hummel <jhummel@google.com>

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -221,6 +221,7 @@ play.modules {
   enabled += modules.CloudStorageModule
   enabled += modules.MainModule
   enabled += modules.DatabaseSeedModule
+  enabled += modules.ProgramCreationModule
 
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
