--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -679,5 +679,8 @@ feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
 esri_address_correction_enabled = false
 esri_address_correction_enabled = ${?ESRI_ADDRESS_CORRECTION_ENABLED}
 esri_find_address_candidates_url = ${?ESRI_FIND_ADDRESS_CANDIDATES_URL}
+# address service area validation
+esri_address_service_area_validation_enabled = false
+esri_address_service_area_validation_enabled = ${?ESRI_ADDRESS_SERVICE_AREA_VALIDATION_ENABLED}
 # the number of tries to make if Esri API returns an error - defaults to 3
 esri_find_address_candidates_tries = ${?ESRI_FIND_ADDRESS_CANDIDATES_TRIES}
