Promote status tracking to a default feature.

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -655,6 +655,7 @@ allow_civiform_admin_access_programs = ${?ALLOW_CIVIFORM_ADMIN_ACCESS_PROGRAMS}
 # Preview features.
 
 # In development features.
+# Deprecated Jan 2023, this is a default feature.
 application_status_tracking_enabled = false
 application_status_tracking_enabled = ${?CIVIFORM_APPLICATION_STATUS_TRACKING_ENABLED}
 program_read_only_view_enabled = false
