conf value to true

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -655,8 +655,8 @@ allow_civiform_admin_access_programs = ${?ALLOW_CIVIFORM_ADMIN_ACCESS_PROGRAMS}
 # Preview features.
 
 # In development features.
-# Deprecated Jan 2023, this is a default feature.
-application_status_tracking_enabled = false
+# Status Tracking is a default feature as of Jan 2023, this control is deprecated.
+application_status_tracking_enabled = true
 application_status_tracking_enabled = ${?CIVIFORM_APPLICATION_STATUS_TRACKING_ENABLED}
 program_read_only_view_enabled = false
 program_read_only_view_enabled = ${?PROGRAM_READ_ONLY_VIEW_ENABLED}
