adds service area validation methods to EsriClient

--- a/server/conf/application.test.conf
+++ b/server/conf/application.test.conf
@@ -23,3 +23,6 @@ application_status_tracking_enabled = true
 program_read_only_view_enabled = true
 feature_flag_overrides_enabled = true
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
+
+# address service area validation relative path for testing
+esri_address_service_area_validation_urls = ["/query"]
