--- a/server/conf/application.dev.conf
+++ b/server/conf/application.dev.conf
@@ -40,6 +40,6 @@ esri_find_address_candidates_url = "https://geocode.arcgis.com/arcgis/rest/servi
 esri_external_call_tries = 3
 esri_address_service_area_validation_enabled = false
 esri_address_service_area_validation_labels = ["Seattle"]
-esri_address_service_area_validation_values = ["Seattle"]
+esri_address_service_area_validation_ids = ["Seattle"]
 esri_address_service_area_validation_urls = ["https://gisdata.seattle.gov/server/rest/services/COS/Seattle_City_Limits/MapServer/1/query"]
-esri_address_service_area_validation_paths = ["features[*].attributes.CITYNAME"]
+esri_address_service_area_validation_attributes = ["CITYNAME"]
