--- a/server/conf/application.test.conf
+++ b/server/conf/application.test.conf
@@ -22,3 +22,6 @@ auth.applicant_idp = "disabled"
 program_read_only_view_enabled = true
 feature_flag_overrides_enabled = true
 feature_flag_overrides_enabled = ${?FEATURE_FLAG_OVERRIDES_ENABLED}
+
+# address service area validation relative path for testing
+esri_address_service_area_validation_urls = ["/query"]
