--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -692,3 +692,7 @@ esri_address_service_area_validation_urls = ${?ESRI_ADDRESS_SERVICE_AREA_VALIDAT
 esri_address_service_area_validation_attributes =  ${?ESRI_ADDRESS_SERVICE_AREA_VALIDATION_ATTRIBUTES}
 # the number of tries to make if Esri API returns an error - defaults to 3
 esri_external_call_tries = ${?ESRI_EXTERNAL_CALL_TRIES}
+
+# Common Intake Form flags
+intake_form_enabled = false
+nongated_eligbility_enabled = false
