--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -695,4 +695,6 @@ esri_external_call_tries = ${?ESRI_EXTERNAL_CALL_TRIES}
 
 # Common Intake Form flags
 intake_form_enabled = false
+intake_form_enabled = ${?INTAKE_FORM_ENABLED}
 nongated_eligbility_enabled = false
+nongated_eligbility_enabled = ${?NONGATED_ELIGIBILITY_ENABLED}
