--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -692,3 +692,14 @@ esri_address_service_area_validation_urls = ${?ESRI_ADDRESS_SERVICE_AREA_VALIDAT
 esri_address_service_area_validation_attributes =  ${?ESRI_ADDRESS_SERVICE_AREA_VALIDATION_ATTRIBUTES}
 # the number of tries to make if Esri API returns an error - defaults to 3
 esri_external_call_tries = ${?ESRI_EXTERNAL_CALL_TRIES}
+
+## Durable Jobs
+durable_jobs {
+  # How often the server polls the database for new durable jobs to execute.
+  poll_interval_seconds = 5
+  poll_interval_seconds = ${?DURABLE_JOBS_POLL_INTERVAL_SECONDS}
+
+  # The timeout setting for child threads executing durable jobs.
+  job_timeout_minutes = 30
+  job_timeout_minutes = ${?DURABLE_JOBS_JOB_TIMEOUT_MINUTES}
+}
