--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -702,4 +702,13 @@ durable_jobs {
   # The timeout setting for child threads executing durable jobs.
   job_timeout_minutes = 30
   job_timeout_minutes = ${?DURABLE_JOBS_JOB_TIMEOUT_MINUTES}
+
+  dispatcher {
+    executor = "thread-pool-executor"
+    throughput = 1
+    thread-pool-executor {
+      fixed-pool-size = 1
+      fixed-pool-size = ${?DURABLE_JOBS_THREAD_POOL_SIZE}
+    }
+  }
 }
