Support login page feature toggles for staging deployments

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -68,7 +68,7 @@ whitelabel {
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
 play.http.secret.key = "changeme"
-play.http.secret.key = ${?SECRET_KEY}
+play.http.secret.key = ${?  SECRET_KEY }
 
 auth {
   # Configure which IDP to use for applicant and admin authentication.
@@ -99,6 +99,7 @@ auth {
   oidc_logout_client_id_param = ${?APPLICANT_OIDC_LOGOUT_CLIENT_PARAM}
 
   # Direct URI to create new account.
+  register_uri = "https://create"
   register_uri = ${?APPLICANT_REGISTER_URI}
 }
 
@@ -657,6 +658,15 @@ allow_civiform_admin_access_programs = ${?ALLOW_CIVIFORM_ADMIN_ACCESS_PROGRAMS}
 
 show_civiform_image_tag_on_landing_page = false
 show_civiform_image_tag_on_landing_page = ${?SHOW_CIVIFORM_IMAGE_TAG_ON_LANDING_PAGE}
+
+# Staging deployment functionality toggles. These toggles only take effect for
+# staging deployments.
+staging_add_noindex_meta_tag = false
+staging_add_noindex_meta_tag = ${?STAGING_ADD_NOINDEX_META_TAG}
+staging_disable_demo_mode_logins = false
+staging_disable_demo_mode_logins = ${?STAGING_DISABLE_DEMO_MODE_LOGINS}
+staging_disable_applicant_guest_login = true
+staging_disable_applicant_guest_login = ${?STAGING_DISABLE_APPLICANT_GUEST_LOGIN}
 
 # Preview features.
 
