--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -664,7 +664,7 @@ staging_add_noindex_meta_tag = false
 staging_add_noindex_meta_tag = ${?STAGING_ADD_NOINDEX_META_TAG}
 staging_disable_demo_mode_logins = false
 staging_disable_demo_mode_logins = ${?STAGING_DISABLE_DEMO_MODE_LOGINS}
-staging_disable_applicant_guest_login = true
+staging_disable_applicant_guest_login = false
 staging_disable_applicant_guest_login = ${?STAGING_DISABLE_APPLICANT_GUEST_LOGIN}
 
 # Preview features.
