--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -658,6 +658,15 @@ allow_civiform_admin_access_programs = ${?ALLOW_CIVIFORM_ADMIN_ACCESS_PROGRAMS}
 show_civiform_image_tag_on_landing_page = false
 show_civiform_image_tag_on_landing_page = ${?SHOW_CIVIFORM_IMAGE_TAG_ON_LANDING_PAGE}
 
+# Staging deployment functionality toggles. These toggles only take effect for
+# staging deployments.
+staging_add_noindex_meta_tag = false
+staging_add_noindex_meta_tag = ${?STAGING_ADD_NOINDEX_META_TAG}
+staging_disable_demo_mode_logins = false
+staging_disable_demo_mode_logins = ${?STAGING_DISABLE_DEMO_MODE_LOGINS}
+staging_disable_applicant_guest_login = false
+staging_disable_applicant_guest_login = ${?STAGING_DISABLE_APPLICANT_GUEST_LOGIN}
+
 # Preview features.
 
 # In development features.
