Durable job runner (#4210)
Co-authored-by: Shane McDaniel <90928876+shanemc-goog@users.noreply.github.com>

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -648,6 +648,26 @@ api_keys_ban_global_subnet = ${?CIVIFORM_API_KEYS_BAN_GLOBAL_SUBNET}
 api_applications_list_max_page_size = 1000
 api_applications_list_max_page_size = ${?CIVIFORM_API_APPLICATIONS_LIST_MAX_PAGE_SIZE}
 
+## Durable Jobs
+durable_jobs {
+  # How often the server polls the database for new durable jobs to execute.
+  poll_interval_seconds = 5
+  poll_interval_seconds = ${?DURABLE_JOBS_POLL_INTERVAL_SECONDS}
+
+  # The timeout setting for child threads executing durable jobs.
+  job_timeout_minutes = 30
+  job_timeout_minutes = ${?DURABLE_JOBS_JOB_TIMEOUT_MINUTES}
+
+  dispatcher {
+    executor = "thread-pool-executor"
+    throughput = 1
+    thread-pool-executor {
+      fixed-pool-size = 1
+      fixed-pool-size = ${?DURABLE_JOBS_THREAD_POOL_SIZE}
+    }
+  }
+}
+
 ## Feature flag toggles.
 # Launched features.
 
