--- a/env-var-docs/requirements.txt
+++ b/env-var-docs/requirements.txt
@@ -1,13 +1,16 @@
-aiohttp==3.8.1
-aiosignal==1.3.1
-async-timeout==4.0.2
 attrs==22.2.0
-charset-normalizer==2.1.1
-frozenlist==1.3.3
-github==1.2.7
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+Deprecated==1.2.13
+env-var-docs==0.1.0
 idna==3.4
 jsonschema==4.17.3
-multidict==6.0.4
+pycparser==2.21
+PyGithub==1.57
+PyJWT==2.6.0
+PyNaCl==1.5.0
 pyrsistent==0.19.3
-typing_extensions==4.4.0
-yarl==1.8.2
+requests==2.28.2
+urllib3==1.26.14
+wrapt==1.14.1
