--- a/.github/workflows/pr_env_var_docs.yaml
+++ b/.github/workflows/pr_env_var_docs.yaml
@@ -3,7 +3,7 @@ name: pr_env_var_docs
 # cancels in-progress jobs on this pull request
 # avoids wasted work when a new commit is pushed
 concurrency:
-  group: pr-server-${{ github.head_ref || github.run_id }}
+  group: pr-env-var-docs-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 on:
