--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -38,6 +38,7 @@ jobs:
         with:
           version: 1.9
           skip-commit: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: show diff
         run: git add .; git diff --exit-code HEAD
