CSV download, scheduling

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -371,7 +371,7 @@ play.ws {
 #
 play.cache {
   # Specific caches can be injected using the @NamedCache annotation.
-  bindCaches = ["api-keys"]
+  bindCaches = ["api-keys", "monthly-reporting-data"]
 }
 
 ## Security rules for play-pac4j SecurityFilter
