--- a/.github/workflows/pr_env_var_docs.yaml
+++ b/.github/workflows/pr_env_var_docs.yaml
@@ -37,12 +37,11 @@ jobs:
         run: mypy --install-types env-var-docs
 
       - name: Run pytest
-        run: pytest --cov=env-var-docs --cov-report=xml
+        run: pytest --cov=env-var-docs
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
-          files: coverage.xml
           verbose: true
           # We're getting intermittent issues with codecov trying to upload lately
           # disabling it from failing the entire pipeline for now.
