Fix .gitignore for restructure

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,6 @@ tailwind.css
 
 # env-var-doc python things
 env-var-docs/venv
-env-var-docs/env_var_docs/build
-env-var-docs/env_var_docs/*.egg*
+env-var-docs/**/*build
+env-var-docs/**/*.egg*
 .coverage
