Deterministic stats on the reporting page

--- a/server/conf/application.dev-browser-tests.conf
+++ b/server/conf/application.dev-browser-tests.conf
@@ -19,3 +19,7 @@ intake_form_enabled = false
 # The default value is true, we set it to false here because we do not know
 # the IP address that will be used to call the API in the browser tests.
 api_keys_ban_global_subnet = false
+
+# deterministic reporting stats for browser tests
+reporting_use_deterministic_stats = true
+
