--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -648,6 +648,9 @@ api_keys_ban_global_subnet = ${?CIVIFORM_API_KEYS_BAN_GLOBAL_SUBNET}
 api_applications_list_max_page_size = 1000
 api_applications_list_max_page_size = ${?CIVIFORM_API_APPLICATIONS_LIST_MAX_PAGE_SIZE}
 
+# deterministic reporting stats for browser tests
+reporting_use_deterministic_stats = false
+
 ## Durable Jobs
 durable_jobs {
   # How often the server polls the database for new durable jobs to execute.
