Remove secret-key as well

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -21,7 +21,6 @@ include "helper/esri.conf"
 include "helper/feature-flags.conf"
 include "helper/ide.conf"
 include "helper/jobs.conf"
-include "helper/secret-key.conf"
 include "helper/whitelabel.conf"
 
 ## filters/LoggingFilter configuration. Overrided in application.dev.conf.
@@ -47,6 +46,14 @@ akka {
   #log-config-on-start = true
   logger-startup-timeout = 30s
 }
+
+## Secret key
+# http://www.playframework.com/documentation/latest/ApplicationSecret
+# ~~~~~
+# The secret key is used to sign Play's session cookie.
+# This must be changed for production, but we don't recommend you change it in this file.
+play.http.secret.key = "changeme"
+play.http.secret.key = ${?SECRET_KEY}
 
 # Base url must start with http(s)://
 base_url = "http://localhost:9000"
