adding PhoneType question feature flag

--- a/server/conf/application.dev-browser-tests.conf
+++ b/server/conf/application.dev-browser-tests.conf
@@ -16,6 +16,7 @@ program_read_only_view_enabled = false
 esri_address_correction_enabled = false
 intake_form_enabled = false
 nongated_eligibility_enabled = false
+phone_number_question_type_enabled = false
 
 # The default value is true, we set it to false here because we do not know
 # the IP address that will be used to call the API in the browser tests.
