--- a/server/conf/helper/feature-flags.conf
+++ b/server/conf/helper/feature-flags.conf
@@ -48,3 +48,6 @@ intake_form_enabled = false
 intake_form_enabled = ${?INTAKE_FORM_ENABLED}
 nongated_eligibility_enabled = false
 nongated_eligibility_enabled = ${?NONGATED_ELIGIBILITY_ENABLED}
+phone_number_question_type_enabled = false
+phone_number_question_type_enabled = ${?ENABLE_PHONE_QUESTION_TYPE}
+
