Default civiform_version to empty string, show civiform_image_tag if version is empty or latest

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -485,7 +485,7 @@ civiform_image_tag = "dev"
 civiform_image_tag = ${?CIVIFORM_IMAGE_TAG}
 
 # The civiform version being deployed, can be "latest" or a version like "v1.18.0".
-civiform_version = "dev"
+civiform_version = ""
 civiform_version = ${?CIVIFORM_VERSION}
 
 # Secret salt for hashing API key secrets. The server will start with the
