Adding Phone question type feature flag (#4401)

--- a/server/conf/application.dev-browser-tests.conf
+++ b/server/conf/application.dev-browser-tests.conf
@@ -17,6 +17,9 @@ esri_address_correction_enabled = false
 intake_form_enabled = false
 nongated_eligibility_enabled = false
 
+#Phone question type enabling flag
+phone_question_type_enabled = false
+
 # The default value is true, we set it to false here because we do not know
 # the IP address that will be used to call the API in the browser tests.
 api_keys_ban_global_subnet = false
