--- a/server/conf/application.dev.conf
+++ b/server/conf/application.dev.conf
@@ -47,3 +47,5 @@ esri_address_service_area_validation_attributes = ["CITYNAME"]
 
 intake_form_enabled = false
 nongated_eligibility_enabled = false
+
+phone_question_type_enabled = false
