--- a/server/conf/helper/feature-flags.conf
+++ b/server/conf/helper/feature-flags.conf
@@ -48,3 +48,8 @@ intake_form_enabled = false
 intake_form_enabled = ${?INTAKE_FORM_ENABLED}
 nongated_eligibility_enabled = false
 nongated_eligibility_enabled = ${?NONGATED_ELIGIBILITY_ENABLED}
+
+#Phone question type enabling flag
+phone_question_type_enabled = false
+phone_question_type_enabled = ${?PHONE_QUESTION_TYPE_ENABLED}
+
