Show civiform image tag if CIVIFORM_VERSION is set to "latest" or "" (#4405)

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -480,8 +480,13 @@ ebean.default = "models.*"
 civiform.time.zoneid="America/Los_Angeles"
 civiform.time.zoneid=${?CIVIFORM_TIME_ZONE_ID}
 
+# The value of SNAPSHOT_TAG, set in bin/build-prod. For example: SNAPSHOT-3af8997-1678895722.
 civiform_image_tag = "dev"
 civiform_image_tag = ${?CIVIFORM_IMAGE_TAG}
+
+# The civiform version being deployed, can be "latest" or a version like "v1.18.0".
+civiform_version = ""
+civiform_version = ${?CIVIFORM_VERSION}
 
 # Secret salt for hashing API key secrets. The server will start with the
 # default value of "changeme" but the admin will not be able to create API keys
