--- a/server/conf/messages.am
+++ b/server/conf/messages.am
@@ -16,11 +16,13 @@ button.apply=አመልክት
 button.applySr=ወደ {0} አመልክት
 button.chooseFile=ፋይል ይምረጡ
 button.continue=ቀጥል
+button.continueCommonIntakeSr={0}ን መሙላት ይቀጥሉ
 button.continueSr=ወደ {0} ማመልከትን ቀጥል
 button.createAccount=መለያ ፍጠር
 button.deleteFile=ሰርዝ
 button.edit=አርትዕ
 button.editAddress=አድራሻን አርትዕ ያድርጉ
+button.editCommonIntakeSr=ለ{0} የገባ መረጃን ያርትዑ
 button.editSr=ወደ {0} ያስገቡትን ማመልከቻ ያርትዑ
 button.goBackAndEdit=ይመለሱ እና አርትዕ ያድርጉ
 button.guestLogin=እንደ እንግዳ ቀጥል
@@ -33,6 +35,8 @@ button.removeEntity={0}ን አስወግድ
 button.review=ገምግም
 button.saveAndConfirm=ያስቀምጡ እና ያረጋግጡ
 button.skipFileUpload=ዝለል
+button.startHere=እዚህ ይጀምሩ
+button.startHereCommonIntakeSr={0}ን በመሙላት እዚህ ይጀምሩ
 button.submit=አስገባ
 # NO TRANSLATION NEEDED - this appears before applicants select their preferred language, so we always use the default.
 button.untranslatedSubmit=Submit
@@ -45,6 +49,7 @@ content.benefits=ጥቅማጥቅሞችን ያግኙ
 content.cannotCheckEligibility=ይህን ችግር በፍጥነት ለማስተካከል እየሰራን ነው። በኋላ ላይ እንደገና ይሞክሩ።
 content.changeAnswersForEligibility=መልሶችዎን ለማርትዕ ወደ ቀዳሚ ገጽ መመለስ ይችላሉ። ወይም ለሌላ ፕሮግራም ያመልክቱ።
 content.confirmed=ለ{0} በማመልከትዎ እናመሰግናለን። ማመልከቻዎ ደርሷል፣ እና የማመልከቻ መታወቂያዎ {1} ነው።
+content.description=CiviForm በ{0} ውስጥ ብቁ ሊሆኑ የሚችሉባቸውን ጥቅማጥቅሞች እንዲያገኙ ያግዝዎታል። ከታች አንድ ማመልከቻ በመምረጥ ይጀምሩ።
 content.description1=CiviForm መረጃን እንደገና በመጠቀም በአንድ ጊዜ ለበርካታ ጥቅማጥቅሞች እንዲያመለክቱ ያስችለዎታል።
 content.description2=ከታች ማመልከቻ በመምረጥ ይጀምሩ።
 content.doesNotQualify=ብቁ አይደለም
@@ -65,15 +70,20 @@ content.suggestedAddresses=የተጠቆሙ አድራሻዎች፦
 dialog.confirmDelete=ይህን {0} ማስወገድ እንደሚፈልጉ እርግጠኛ ነዎት? ይህ ለውጥ «ቀጣይ»ን ከተጫኑ በኋላ ይቀመጣል፣ እና ከዚህ {0} ጋር የተጎዳኘ ሁሉም ውሂብ ይጠፋል።
 email.applicationReceivedBody=የ{0} ፕሮግራም ማመልከቻዎ ደርሷል። የአመልካች መታወቂያዎ {1} ነው፣ እና የማመልከቻ መታወቂያው {2} ነው
 email.applicationReceivedSubject=የ{0} ፕሮግራም ማመልከቻዎ ደርሷል
+email.applicationUpdateSubject=በእርስዎ ማምልከቻ {0} ላይ ዝማኔ
 email.loginToCiviform=ወደ CiviForm {0} ላይ በመለያ ይግቡ
 email.tiApplicationSubmittedBody=እንደ {1} ያስገቡት የ{0} ፕሮግራም ማመልከቻ ደርሷል፣ እና የማመልከቻ መታወቂያው {2} ነው።
 email.tiApplicationSubmittedSubject=ለ{0} ፕሮግራም አመልካች {1}ን በመወከል ማመልከቻ አስገብተዋል
+email.tiApplicationUpdateBody=በፕሮግራም {1} ላይ ለአመልካች {0} ሁኔታው ወደ {2} ተለውጧል።
+email.tiApplicationUpdateSubject=አመልካች {1}ን በመወከል ለፕሮግራም {0} በማመልከቻ ላይ ዝማኔ
 email.tiManageYourClients=ደንበኛዎችዎን በ{0} ላይ ያስተዳድሩ።
 error.notFoundDescription=እባክዎ ወደ ኋላ ይመለሱ ወይም ወደ {0} ይመለሱ
 error.notFoundDescriptionLink=መነሻ ገጽ
 error.notFoundTitle=ለመጎብኘት የሞከሩትን ገጽ ማግኘት አልቻልንም
 footer.supportLinkDescription=ለቴክኒካዊ ድጋፍ፣ እውቂያ
 guest=እንግዳ
+header.endSession=ክፍለ-ጊዜን አብቃ
+header.guestIndicator=እንግዳ ተጠቃሚ ነዎት
 header.userName=እንደ {0} ሆነው ገብተዋል
 input.fileAlreadyUploaded=የተሰቀለ ፋይል፦ {0}
 label.addressLine2=አፓርታማ፣ ጥቅል፣ ወዘተ (አማራጭ)
@@ -106,12 +116,15 @@ tag.mayNotQualifyTi=ደንበኛዎ ብቁ ላይሆኑ ይችላሉ
 tag.mayQualify=ብቁ ሊሆኑ ይችላሉ
 tag.mayQualifyTi=ደንበኛዎ ብቁ ሊሆኑ ይችላሉ
 title.activeProgramsUpdated=ያልተጀመሩ
+title.allProgramsSection=ሁሉም ፕሮግራሞች ({0})
 title.applicantNotEligible=እርስዎ ጥያቄዎች በሰጧቸው ምላሾች መሰረት ለ{0} ብቁ ላይሆኑ ይችላሉ።
 title.applicantNotEligibleTi=እርስዎ ለሚከተሉት ጥያቄዎች በሰጧቸው ምላሾች መሰረት ደንበኛዎ ለ{0} ብቁ ላይሆኑ ይችላሉ።
 title.applicationConfirmation=የማመልከቻ ማረጋገጫ
 title.cannotCheckEligibility=በዚህ ጊዜ ለ{0} የእርስዎን ብቁነት ማረጋገጥ አንችልም።
 title.cannotCheckEligibilityTi=በዚህ ጊዜ ለ{0} የደንበኛዎን ብቁነት ማረጋገጥ አንችልም።
+title.commonIntakeSummary=የጥቅማጥቅሞች ቅድመ-ማጣሪያ ማጠቃለያ
 title.createAnAccount=መለያ ይፍጠሩ ወይም ይግቡ
+title.findServicesSection=የሚያግዙዎትን አገልግሎቶች ያግኙ
 title.inProgressProgramsUpdated=በሂደት ላይ
 title.login=ግባ
 title.noValidAddress=ምንም የሚሠሩ አድራሻዎች አልተገኙም
